@@ -1,6 +1,10 @@
+import java.util.regex.*
+
 enum TestCategories {
+    ActiveDirectory,
     ActuatorEndpoint,
     AmazonWebServices,
+    AMQP,
     Attributes,
     Audits,
     Authentication,
@@ -8,35 +12,43 @@ enum TestCategories {
     AuthenticationPolicy,
     AuthenticationMetadata,
     AuthenticationThrottling,
+    Azure,
     CAS,
     CasConfiguration,
     Cassandra,
     Cipher,
+    Consent,
     Cookie,
-    CosmosDb,
-    Couchbase,
-    CouchDb,
     Delegation,
     DuoSecurity,
     DynamoDb,
-    Ehcache,
+    Elastic,
     ExpirationPolicy,
     Events,
     FileSystem,
+    GCP,
     GeoLocation,
+    Git,
     Groovy,
+    GroovyAuthentication,
+    GroovyMfa,
+    GroovyServices,
     Grouper,
     Hazelcast,
+    Hibernate,
     Ignite,
     Impersonation,
-    Infinispan,
     InfluxDb,
     JDBC,
+    JDBCMFA,
     JDBCAuthentication,
-    JMS,
     JMX,
     Kafka,
+    LdapAttributes,
+    LdapAuthentication,
     Ldap,
+    LdapServices,
+    LdapRepository,
     Logout,
     Mail,
     MariaDb,
@@ -47,9 +59,12 @@ enum TestCategories {
     MFATrigger,
     MFATrustedDevices,
     MongoDb,
+    MongoDbMFA,
     MsSqlServer,
     MySQL,
     OAuth,
+    OAuthToken,
+    OAuthWeb,
     OIDC,
     Oracle,
     PasswordOps,
@@ -62,9 +77,12 @@ enum TestCategories {
     SAML,
     SAML1,
     SAML2,
+    SAML2Web,
     SAMLMetadata,
     SAMLServiceProvider,
     SAMLLogout,
+    SAMLAttributes,
+    SAMLResponse,
     SCIM,
     SHELL,
     Simple,
@@ -78,6 +96,8 @@ enum TestCategories {
     WebApp,
     Webflow,
     WebflowActions,
+    WebflowAccountActions,
+    WebflowServiceActions,
     WebflowAuthenticationActions,
     WebflowConfig,
     WebflowMfaConfig,
@@ -89,35 +109,45 @@ enum TestCategories {
 }
 
 if (rootProject.tasks.findByName("testCategories") == null) {
-    rootProject.tasks.create(name: "testCategories", description: "Display all available test categories") {
+    rootProject.tasks.register("testCategories") {
+        description = "Display all available test categories"
         doLast {
-            def categoryMatchPattern = System.getenv().get("CATEGORY_REGEX") ?: ".*"
+            def pattern = System.getenv().get("CATEGORY_REGEX") ?: ".*"
+            def categoryMatchPattern = Pattern.compile(pattern, Pattern.CASE_INSENSITIVE)
             def result = TestCategories.values()
-                    .findAll { it.name().matches(categoryMatchPattern) }
+                    .findAll {it.name().find(categoryMatchPattern) }
                     .toSorted({ o1, o2 ->
                         o1.name().compareTo(o2.name())
                     })
-                    .collect { it.name().toLowerCase() }
+                    .collect { it.name().toLowerCase(Locale.ENGLISH) }
             println(groovy.json.JsonOutput.toJson(result))
         }
     }
 }
 
 if (rootProject.tasks.findByName("puppeteerScenarios") == null) {
-    rootProject.tasks.create(name: "puppeteerScenarios", description: "Display all available puppeteer scenarios") {
+    rootProject.tasks.register("puppeteerScenarios") {
+        description = "Display all available puppeteer scenarios"
+
+        def puppeteerScenariosFrom = project.providers.gradleProperty("puppeteerScenariosFrom").getOrNull()
+        def puppeteerScenariosTo = project.providers.gradleProperty("puppeteerScenariosTo").getOrNull()
+        def scenariosDirectory = rootProject.file("ci/tests/puppeteer/scenarios")
+
         doLast {
             def scenarios = []
-            def scenarioMatchPattern = System.getenv().get("SCENARIO_REGEX") ?: ".*"
-            rootProject.file("ci/tests/puppeteer/scenarios").eachDirMatch(~scenarioMatchPattern) {
+            def pattern = System.getenv().get("SCENARIO_REGEX") ?: ".*"
+            def scenarioMatchPattern = Pattern.compile(pattern, Pattern.CASE_INSENSITIVE)
+
+            scenariosDirectory.eachDirMatch(scenarioMatchPattern) {
                 scenarios += it.getName()
             }
             Collections.sort(scenarios)
-            if (project.hasProperty("puppeteerScenariosFrom") && project.hasProperty("puppeteerScenariosTo")) {
-                def start = Integer.parseInt(project.puppeteerScenariosFrom)
-                def to = Integer.parseInt(project.puppeteerScenariosTo)
-                if (to > scenarios.size())
-                    to = scenarios.size()
-                scenarios = scenarios.subList(start, to)
+            if (puppeteerScenariosFrom != null && puppeteerScenariosTo != null) {
+                def fromScenario = Integer.parseInt(puppeteerScenariosFrom)
+                def toScenario = Integer.parseInt(puppeteerScenariosTo)
+                if (toScenario > scenarios.size())
+                    toScenario = scenarios.size()
+                scenarios = scenarios.subList(fromScenario, toScenario)
             }
 //            println scenarios.size()
             println(groovy.json.JsonOutput.toJson(scenarios))
@@ -126,13 +156,17 @@ if (rootProject.tasks.findByName("puppeteerScenarios") == null) {
 }
 
 TestCategories.values().each({ category ->
-    if (hasTestsOfCategory(project, category.name())) {
+    def sourceTestDirs = project.sourceSets.test.java.srcDirs
+    def jacocoTestExecutionResultsFile = project.layout.buildDirectory.file('jacoco/jacocoTest.exec').get().asFile
+    if (hasTestsOfCategory(sourceTestDirs, category.name())) {
         def taskName = "test${category.name()}"
-        if (tasks.findByName(taskName) == null) {
+        if (!tasks.getNames().contains(taskName)) {
             // println "Creating task ${taskName} for ${project.name}"
-            tasks.create(name: taskName, type: Test, description: "Testing category ${category.name()}") {
-                enabled = shouldTest(project, category.name())
-                //finalizedBy jacocoTestReport
+            tasks.register(taskName, Test) {
+                description = "Run unit/integration tests to verify the test category: ${category.name()}"
+                group = "CAS Tests"
+                enabled = shouldTest(sourceTestDirs, category.name())
+                outputs.file(jacocoTestExecutionResultsFile)
                 useJUnitPlatform {
                     includeTags category.name()
                 }
@@ -141,30 +175,30 @@ TestCategories.values().each({ category ->
     }
 })
 
-test {
+tasks.named('test') {
     enabled = false
     onlyIf = {
         false
     }
 }
 
-tasks.withType(Test) {
+tasks.withType(Test).configureEach {
+    it.inputs.property("github.repository") {
+        System.getenv("GITHUB_REPOSITORY") ?: "apereo/cas"
+    }
+    
     scanForTestClasses = false
     ignoreFailures = providers.systemProperty("ignoreTestFailures").present
     forkEvery = 2000
-    doFirst {
-        maxParallelForks = project.ext.properties.get("maxParallelForksForTests", 8)
-        if (maxParallelForks != 2) {
-            logger.info "Maximum number of parallel forks is set to ${maxParallelForks}"
-        }
+    maxParallelForks = project.ext.properties.get("maxParallelForksForTests", 8)
+    if (maxParallelForks != 2) {
+        logger.info "Maximum number of parallel forks is set to ${maxParallelForks}"
     }
-
     def ci = System.getenv().containsKey("CI")
     if (ci) {
         outputs.upToDateWhen { false }
     }
     systemProperty("spring.main.banner-mode", "off")
-//    systemProperty("spring.main.lazy-initialization", "true")
     systemProperty("CI", ci)
 
     failFast = true
@@ -174,8 +208,16 @@ tasks.withType(Test) {
     list.add("java.se")
     list.add("--add-exports")
     list.add("java.base/jdk.internal.ref=ALL-UNNAMED")
+    list.add("--add-exports")
+    list.add("java.xml.crypto/org.jcp.xml.dsig.internal.dom=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("java.base/java.lang=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.util=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.time=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.net=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("java.base/java.nio=ALL-UNNAMED")
     list.add("--add-opens")
@@ -236,36 +278,40 @@ Results for test suite [${desc.displayName}]: ${result.resultType} @ ${new java.
             failOnPassedAfterRetry = false
         }
     }
-    jacoco {
-        dumpOnExit = true
-        excludes = rootProject.excludedFilesFromTestCoverage
+    if (!project.path.contains(":docs")) {
+        jacoco {
+            dumpOnExit = true
+            excludes = rootProject.excludedFilesFromTestCoverage
+            destinationFile = layout.buildDirectory.file('jacoco/jacocoTest.exec').get().asFile
+            classDumpDir = layout.buildDirectory.dir('jacoco/classpathdumps').get().asFile
+        }
     }
+    
     filter {
         setFailOnNoMatchingTests(false)
         excludeTestsMatching "*TestsSuite"
     }
 }
 
-def shouldTest(Project project, String category) {
+def shouldTest(Set sourceTestDirectories, String category) {
     def foundTest = gradle.startParameter.taskNames.any { task -> task.matches(/^test${category}$/) }
     if (!foundTest) {
-        logger.debug "No tests with category ${category} found for ${project.name}"
+        logger.debug "No tests with category ${category} found"
     }
-    return !providers.systemProperty("skipTests").present && foundTest && hasTestsOfCategory(project, category)
+    return !providers.systemProperty("skipTests").present && foundTest && hasTestsOfCategory(sourceTestDirectories, category)
 }
 
-def hasTestsOfCategory(Project project, String category) {
-    def testSrc = project.sourceSets.test.java.srcDirs
-    def res = srcTagMap.computeIfAbsent(testSrc) {
+def hasTestsOfCategory(Set sourceTestDirectories, String category) {
+    def res = srcTagMap.computeIfAbsent(sourceTestDirectories) {
         def tags = new HashSet()
-        testSrc.each { src ->
+        sourceTestDirectories.each { src ->
             try {
                 src.eachFileRecurse { file ->
                     if (file ==~ /.*Tests\.\w+/) {
                         file.readLines().parallelStream().forEach() { line ->
-                            def m = line =~ /^\s*@Tag\("(\w+)"\)\s*$/
-                            if (m) {
-                                tags.addAll(m.collect { it[1] })
+                            def match = line =~ /^\s*@Tag\("(\w+)"\)\s*$/
+                            if (match) {
+                                tags.addAll(match.collect { it[1] })
                             }
                         }
                     }
